--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
   <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="txt.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
+    <div>TIRAGE ALEATOIRE</div>
+    <input 
   </body>
 </htm>
